--- a/haskell/haskell.cabal
+++ b/haskell/haskell.cabal
@@ -29,6 +29,8 @@ executable haskell
 
     -- LANGUAGE extensions used by modules in this package.
     -- other-extensions:
-    build-depends:    base ^>=4.14.3.0
+    build-depends:
+        base ^>=4.14.3.0,
+        haskell-say ^>=1.0.0.0
     hs-source-dirs:   app
     default-language: Haskell2010
